# dclaw-research

./: .gitignore  AGENTS.md  PLAN-v1.2.md  README.md  REVISED-PRD.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: build-backend.yml  build-desktop.yml  build-frontend.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/api/: main.py
backend/app/api/routes/: health.py
backend/app/api/v1/research/: __init__.py  graph.py  report.py  research.py  sources.py
backend/app/core/: celery_app.py  config.py  database.py  redis.py
backend/app/models/: __init__.py  research.py
backend/app/schemas/: __init__.py  research.py
backend/app/services/: graph_builder.py  research_tasks.py  search_service.py  synthesis_service.py  verification_service.py
benchmarks/: tts-benchmark.md  video-generation-benchmark.md
docs/: README.md  meta.json
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/guides/: index.md  use-cases.md
docs/reference/: api.md  architecture.md  index.md
docs/releases/: index.md
docs/troubleshooting/: common-issues.md  faq.md  index.md
experiments/: character-consistency-experiment.md
frontend/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/research/[id]/graph/: page.tsx
frontend/src/components/graph/: knowledge-graph.tsx
frontend/src/components/report-editor/: report-editor.tsx
frontend/src/components/source-card/: source-card.tsx
frontend/src/lib/: api.ts
helm/: Chart.yaml  values.yaml
helm/dclaw-research/: Chart.yaml  values.yaml
helm/dclaw-research/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
prompts/: comfyui-workflows.md  storyboard-prompts.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+3 files in other folders)
