[package]
name = "dclaw-research"
version = "0.1.0"
description = "DClaw Research Desktop"
authors = ["DClaw"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-updater = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
